# music-tools

./: .gitignore  CHANGELOG.md  CHANGELOG_CONSOLIDATION.md  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTORING_SUMMARY.txt  WORKSPACE.md  debug_post_html.py  launch_music_tools.sh  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  test_runner_output.txt  verify_delete_fix.py  verify_restored_scraper.py  verify_runner_output.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml
.swarm/: state.json
apps/music-tools/: HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.txt  QUICK_START.md  STREAMLIT_UI_README.md  benchmark_batch_operations.py  check_cache.py  debug_flow.py  deezer_response.html  demo_library_feature.py  edm_scraper_results_20260202_111216.txt  inventory.ini  launch_music_tools.sh  menu.py  menu.py.j2  requirements.txt  run_streamlit.sh  setup.py  setup_wizard.py  site.yml  streamlit_app.py  test_library_integration.py  validate_installation.py
audit/archived/: README.md
audit/docs/: README.md  coverage-analysis.json  file-inventory.json  gaps-identified.json  quality-assessment.json
docs/: ACTUAL_CLEANUP_EXECUTED.md  ADDITIONAL_REFACTORING_2026-01-26.md  INTEGRATION_TEST_SUMMARY.md  README.md  REFACTORING_COMPLETE_2026-01-26.md  REFACTORING_SUMMARY_2026-01-26.md  TEST_COVERAGE_REPORT.md  database-architecture-quality-metrics.md  ui-ascii-mockups.txt  ui-design-smart-cleanup.md  ui-implementation-examples.py
docs/architecture/: MONOREPO.md  README.md  SERATO_TOOLS_MERGER_PLAN.md
docs/archive/: README.md
docs/audit/: README.md
docs/features/: library-management.md  overview.md
docs/getting-started/: README.md  installation.md  quick-start.md
docs/guides/: DOCUMENTATION.md  README.md
docs/performance/: README.md  batch-operations.md  database-optimization.md  quick-start-optimization.md
docs/quality/: README.md  improvement-roadmap.md
docs/reference/: README.md  workspace.md
docs/reviews/: ARCHITECTURE_INDEX.md
scripts/: README.md  migrate_database_indexes.py  quick_check.sh  test_e2e_workflow.py  validate_consolidation.py
tools/documentation/: README.md  analyze_validation.py  check_external_links.py  external_links_check.json  link_fixes_report.json  (+2 more)
(+170 files in other folders)
